--- a/Android/ArtI/app/src/main/res/layout/fragment_sign_up.xml
+++ b/Android/ArtI/app/src/main/res/layout/fragment_sign_up.xml
@@ -13,182 +13,191 @@
         android:background="@drawable/login_background"
         tools:context=".ui.signup.SignUpFragment">
 
-        <androidx.constraintlayout.widget.ConstraintLayout
+        <ScrollView
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:background="@color/trans_cover_color">
 
-            <androidx.cardview.widget.CardView
-                android:id="@+id/signup_profile_img_cv"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                app:cardCornerRadius="100dp"
-                app:layout_constraintVertical_chainStyle="packed"
-                app:layout_constraintBottom_toTopOf="@id/sign_email_tv"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toTopOf="parent">
+            <androidx.constraintlayout.widget.ConstraintLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content">
 
-                <ImageView
-                    android:id="@+id/signup_profile_iv"
-                    android:layout_width="100dp"
-                    android:layout_height="100dp"
-                    android:scaleType="centerCrop"
-                    android:src="@drawable/profile_img" />
-            </androidx.cardview.widget.CardView>
+                <androidx.cardview.widget.CardView
+                    android:id="@+id/signup_profile_img_cv"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="30dp"
+                    app:cardCornerRadius="100dp"
+                    app:layout_constraintBottom_toTopOf="@id/sign_email_tv"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toTopOf="parent"
+                    app:layout_constraintVertical_chainStyle="packed">
 
-            <TextView
-                style="@style/LoginTextTitle"
-                android:id="@+id/sign_email_tv"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="이메일"
-                app:layout_constraintBottom_toTopOf="@id/sign_email_et"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/signup_profile_img_cv" />
+                    <ImageView
+                        android:id="@+id/signup_profile_iv"
+                        android:layout_width="100dp"
+                        android:layout_height="100dp"
+                        android:scaleType="centerCrop"
+                        android:src="@drawable/profile_img" />
+                </androidx.cardview.widget.CardView>
 
-            <EditText
-                android:id="@+id/sign_email_et"
-                style="@style/LoginEditInput"
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                app:layout_constraintBottom_toTopOf="@id/sign_certification_tv"
-                app:layout_constraintEnd_toStartOf="@+id/sign_email_btn"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/sign_email_tv" />
+                <TextView
+                    android:id="@+id/sign_email_tv"
+                    style="@style/LoginTextTitle"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="이메일"
+                    app:layout_constraintBottom_toTopOf="@id/sign_email_et"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toBottomOf="@+id/signup_profile_img_cv" />
 
-            <androidx.appcompat.widget.AppCompatButton
-                style="@style/ButtonRoundShort8"
-                android:id="@+id/sign_email_btn"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="전송"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintTop_toTopOf="@+id/sign_email_et" />
+                <EditText
+                    android:id="@+id/sign_email_et"
+                    style="@style/LoginEditInput"
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    app:layout_constraintBottom_toTopOf="@id/sign_certification_tv"
+                    app:layout_constraintEnd_toStartOf="@+id/sign_email_btn"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toBottomOf="@+id/sign_email_tv" />
 
-            <TextView
-                style="@style/LoginTextTitle"
-                android:id="@+id/sign_certification_tv"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="인증번호"
-                app:layout_constraintBottom_toTopOf="@id/sign_certification_et"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/sign_email_et" />
+                <androidx.appcompat.widget.AppCompatButton
+                    android:id="@+id/sign_email_btn"
+                    style="@style/ButtonRoundShort8"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="전송"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintTop_toTopOf="@+id/sign_email_et" />
 
-            <EditText
-                android:id="@+id/sign_certification_et"
-                style="@style/LoginEditInput"
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                android:background="@drawable/shape_login_edit_text"
-                app:layout_constraintBottom_toTopOf="@id/sign_nick_tv"
-                app:layout_constraintEnd_toStartOf="@+id/sign_certification_btn"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/sign_certification_tv" />
+                <TextView
+                    android:id="@+id/sign_certification_tv"
+                    style="@style/LoginTextTitle"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:visibility="gone"
+                    android:text="인증번호"
+                    app:layout_constraintBottom_toTopOf="@id/sign_certification_et"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toBottomOf="@+id/sign_email_et" />
 
-            <androidx.appcompat.widget.AppCompatButton
-                style="@style/ButtonRoundShort8"
-                android:id="@+id/sign_certification_btn"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="인증"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintTop_toTopOf="@+id/sign_certification_et" />
+                <EditText
+                    android:id="@+id/sign_certification_et"
+                    style="@style/LoginEditInput"
+                    android:layout_width="0dp"
+                    android:visibility="gone"
+                    android:layout_height="wrap_content"
+                    android:background="@drawable/shape_login_edit_text"
+                    app:layout_constraintBottom_toTopOf="@id/sign_nick_tv"
+                    app:layout_constraintEnd_toStartOf="@+id/sign_certification_btn"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toBottomOf="@+id/sign_certification_tv" />
 
-            <TextView
-                android:id="@+id/sign_code_des_tv"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="인증번호가 발송되었습니다."
-                android:visibility="invisible"
-                android:textColor="@color/white"
-                app:layout_constraintStart_toStartOf="@+id/sign_certification_et"
-                app:layout_constraintTop_toBottomOf="@+id/sign_certification_et" />
-            <TextView
-                android:id="@+id/sign_nick_tv"
-                style="@style/LoginTextTitle"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="닉네임"
-                app:layout_constraintBottom_toTopOf="@id/sign_nick_et"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/sign_certification_et" />
+                <androidx.appcompat.widget.AppCompatButton
+                    android:id="@+id/sign_certification_btn"
+                    style="@style/ButtonRoundShort8"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:visibility="gone"
+                    android:text="인증"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintTop_toTopOf="@+id/sign_certification_et" />
 
-            <EditText
-                android:id="@+id/sign_nick_et"
-                style="@style/LoginEditInput"
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                app:layout_constraintBottom_toTopOf="@id/sign_pw_tv"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/sign_nick_tv" />
+                <TextView
+                    android:id="@+id/sign_code_des_tv"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="인증번호가 발송되었습니다."
+                    android:textColor="@color/white"
+                    android:visibility="invisible"
+                    app:layout_constraintStart_toStartOf="@+id/sign_certification_et"
+                    app:layout_constraintTop_toBottomOf="@+id/sign_certification_et" />
 
-            <TextView
-                android:id="@+id/sign_pw_tv"
-                style="@style/LoginTextTitle"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="비밀번호"
-                app:layout_constraintBottom_toTopOf="@id/sign_pw_et"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/sign_nick_et" />
+                <TextView
+                    android:id="@+id/sign_nick_tv"
+                    style="@style/LoginTextTitle"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="닉네임"
+                    app:layout_constraintBottom_toTopOf="@id/sign_nick_et"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toBottomOf="@+id/sign_certification_et" />
 
-            <EditText
-                android:id="@+id/sign_pw_et"
-                style="@style/LoginEditInput"
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                app:layout_constraintBottom_toTopOf="@id/sign_pw_verify_tv"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/sign_pw_tv" />
+                <EditText
+                    android:id="@+id/sign_nick_et"
+                    style="@style/LoginEditInput"
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    app:layout_constraintBottom_toTopOf="@id/sign_pw_tv"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toBottomOf="@+id/sign_nick_tv" />
 
-            <TextView
-                android:id="@+id/sign_pw_verify_tv"
-                style="@style/LoginTextTitle"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="비밀번호 확인"
-                app:layout_constraintBottom_toTopOf="@id/sign_pw_verify_et"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/sign_pw_et" />
+                <TextView
+                    android:id="@+id/sign_pw_tv"
+                    style="@style/LoginTextTitle"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="비밀번호"
+                    app:layout_constraintBottom_toTopOf="@id/sign_pw_et"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toBottomOf="@+id/sign_nick_et" />
 
-            <EditText
-                android:id="@+id/sign_pw_verify_et"
-                style="@style/LoginEditInput"
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                app:layout_constraintBottom_toTopOf="@id/sign_cancel_btn"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/sign_pw_verify_tv" />
+                <EditText
+                    android:id="@+id/sign_pw_et"
+                    style="@style/LoginEditInput"
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    app:layout_constraintBottom_toTopOf="@id/sign_pw_verify_tv"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toBottomOf="@+id/sign_pw_tv" />
 
-            <androidx.appcompat.widget.AppCompatButton
-                style="@style/ButtonRoundShort8"
-                android:id="@+id/sign_cancel_btn"
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                android:text="취소"
-                android:layout_margin="20dp"
-                app:layout_constraintBottom_toBottomOf="parent"
-                app:layout_constraintEnd_toStartOf="@id/sign_btn"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/sign_pw_verify_et" />
+                <TextView
+                    android:id="@+id/sign_pw_verify_tv"
+                    style="@style/LoginTextTitle"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="비밀번호 확인"
+                    app:layout_constraintBottom_toTopOf="@id/sign_pw_verify_et"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toBottomOf="@+id/sign_pw_et" />
 
-            <androidx.appcompat.widget.AppCompatButton
-                style="@style/ButtonRoundShort8"
-                android:id="@+id/sign_btn"
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                android:text="가입"
-                android:layout_marginHorizontal="20dp"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintStart_toEndOf="@+id/sign_cancel_btn"
-                app:layout_constraintTop_toTopOf="@+id/sign_cancel_btn" />
+                <EditText
+                    android:id="@+id/sign_pw_verify_et"
+                    style="@style/LoginEditInput"
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    app:layout_constraintBottom_toTopOf="@id/sign_cancel_btn"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toBottomOf="@+id/sign_pw_verify_tv" />
 
-        </androidx.constraintlayout.widget.ConstraintLayout>
+                <androidx.appcompat.widget.AppCompatButton
+                    android:id="@+id/sign_cancel_btn"
+                    style="@style/ButtonRoundShort8"
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:layout_margin="20dp"
+                    android:text="취소"
+                    app:layout_constraintBottom_toBottomOf="parent"
+                    app:layout_constraintEnd_toStartOf="@id/sign_btn"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toBottomOf="@+id/sign_pw_verify_et" />
 
+                <androidx.appcompat.widget.AppCompatButton
+                    android:id="@+id/sign_btn"
+                    style="@style/ButtonRoundShort8"
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:layout_marginHorizontal="20dp"
+                    android:text="가입"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintStart_toEndOf="@+id/sign_cancel_btn"
+                    app:layout_constraintTop_toTopOf="@+id/sign_cancel_btn" />
+
+            </androidx.constraintlayout.widget.ConstraintLayout>
+        </ScrollView>
     </FrameLayout>
 </layout>
