--- a/Android/ArtI/app/src/main/res/values/themes.xml
+++ b/Android/ArtI/app/src/main/res/values/themes.xml
@@ -40,12 +40,13 @@
     <style name="LoginEditInput" parent="Widget.AppCompat.EditText">
         <item name="android:background">@drawable/shape_login_edit_text</item>
         <item name="android:paddingVertical">10dp</item>
-        <item name="android:layout_margin">10dp</item>
+        <item name="android:paddingHorizontal">10dp</item>
+        <item name="android:layout_margin">15dp</item>
     </style>
 
     <style name="LoginTextTitle" parent="TextAppearance.AppCompat">
         <item name="android:textColor">@color/white</item>
-        <item name="android:textSize">24sp</item>
+        <item name="android:textSize">20sp</item>
         <item name="android:layout_marginTop">15dp</item>
         <item name="android:layout_marginStart">10dp</item>
     </style>
