--- a/Android/ArtI/app/src/main/res/layout/item_art_museum.xml
+++ b/Android/ArtI/app/src/main/res/layout/item_art_museum.xml
@@ -13,7 +13,7 @@
         android:paddingStart="12dp">
 
         <ImageView
-            android:id="@+id/iv_genre"
+            android:id="@+id/iv_art_museum"
             android:layout_width="160dp"
             android:layout_height="160dp"
             android:scaleType="fitXY"
@@ -24,15 +24,15 @@
             app:layout_constraintTop_toTopOf="parent" />
 
         <ImageView
-            android:id="@+id/iv_gradation_genre"
+            android:id="@+id/iv_gradation_art_museum"
             android:layout_width="0dp"
             android:layout_height="40dp"
             android:alpha="0.7"
             android:scaleType="fitXY"
             android:src="@drawable/gradation_black"
-            app:layout_constraintBottom_toBottomOf="@id/iv_genre"
-            app:layout_constraintEnd_toEndOf="@id/iv_genre"
-            app:layout_constraintStart_toStartOf="@id/iv_genre" />
+            app:layout_constraintBottom_toBottomOf="@id/iv_art_museum"
+            app:layout_constraintEnd_toEndOf="@id/iv_art_museum"
+            app:layout_constraintStart_toStartOf="@id/iv_art_museum" />
 
         <TextView
             android:id="@+id/tv_art_title"
@@ -40,11 +40,11 @@
             android:layout_height="wrap_content"
             android:layout_marginStart="8dp"
             android:layout_marginBottom="4dp"
-            android:text="@string/genre"
+            android:text="@string/art_museum"
             android:textColor="@color/white"
             android:textSize="20sp"
-            app:layout_constraintBottom_toBottomOf="@id/iv_genre"
-            app:layout_constraintStart_toStartOf="@id/iv_genre" />
+            app:layout_constraintBottom_toBottomOf="@id/iv_art_museum"
+            app:layout_constraintStart_toStartOf="@id/iv_art_museum" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 </layout>
