--- a/Android/ArtI/app/src/main/res/layout/fragment_login.xml
+++ b/Android/ArtI/app/src/main/res/layout/fragment_login.xml
@@ -16,29 +16,37 @@
             android:background="@color/trans_cover_color"
             tools:context=".ui.login.LoginFragment">
 
+            <androidx.constraintlayout.widget.Guideline
+                android:id="@+id/vertical_guideline"
+                android:orientation="horizontal"
+                app:layout_constraintGuide_percent="0.5"
+                app:layout_constraintVertical_bias="0.7"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"/>
+
             <ImageView
                 android:id="@+id/login_logo_iv"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:src="@drawable/ic_logo_white"
                 android:layout_marginTop="20dp"
                 android:scaleX="0.8"
                 android:scaleY="0.8"
-                app:layout_constraintVertical_chainStyle="packed"
-                app:layout_constraintBottom_toTopOf="@id/login_id_tv"
+                android:src="@drawable/ic_logo_white"
+                app:layout_constraintBottom_toTopOf="@+id/vertical_guideline"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toTopOf="parent" />
+                app:layout_constraintTop_toTopOf="parent"
+                app:layout_constraintVertical_chainStyle="packed" />
 
             <TextView
-                style="@style/LoginTextTitle"
                 android:id="@+id/login_id_tv"
+                style="@style/LoginTextTitle"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="40dp"
+                android:layout_marginTop="50dp"
                 android:text="아이디"
                 app:layout_constraintBottom_toTopOf="@id/login_id_et"
-                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintStart_toStartOf="@+id/login_id_et"
                 app:layout_constraintTop_toBottomOf="@+id/login_logo_iv" />
 
             <EditText
@@ -53,15 +61,14 @@
                 app:layout_constraintTop_toBottomOf="@+id/login_id_tv" />
 
             <TextView
-                style="@style/LoginTextTitle"
                 android:id="@+id/login_pw_tv"
+                style="@style/LoginTextTitle"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:layout_marginTop="10dp"
                 android:text="비밀번호"
-                android:layout_marginTop="30dp"
-                android:layout_marginStart="10dp"
                 app:layout_constraintBottom_toTopOf="@id/login_pw_et"
-                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintStart_toStartOf="@+id/login_pw_et"
                 app:layout_constraintTop_toBottomOf="@+id/login_id_et" />
 
             <EditText
