--- a/Android/ArtI/app/src/main/res/layout/item_subscribe.xml
+++ b/Android/ArtI/app/src/main/res/layout/item_subscribe.xml
@@ -9,8 +9,7 @@
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginHorizontal="20dp">
+        android:layout_height="wrap_content">
 
         <LinearLayout
             android:id="@+id/subscribe_lt"
@@ -52,7 +51,8 @@
                     android:layout_weight="1"
                     android:gravity="bottom"
                     android:text="병현이의 미술관"
-                    android:textSize="20sp"
+                    android:singleLine="true"
+                    android:textSize="18sp"
                     android:textStyle="bold" />
 
                 <TextView
@@ -61,7 +61,7 @@
                     android:layout_height="0dp"
                     android:layout_weight="1"
                     android:text="병현이"
-                    android:textSize="15sp" />
+                    android:textSize="14sp" />
             </LinearLayout>
         </LinearLayout>
 
@@ -69,7 +69,7 @@
             android:layout_width="match_parent"
             android:layout_height="1dp"
             android:background="@color/trans_cover_color"
-            android:layout_marginHorizontal="5dp"
+            android:layout_marginHorizontal="15dp"
             app:layout_constraintEnd_toEndOf="@+id/subscribe_lt"
             app:layout_constraintStart_toStartOf="@+id/subscribe_lt"
             app:layout_constraintTop_toBottomOf="@+id/subscribe_lt" />/>
