--- a/Android/ArtI/app/src/main/res/layout/fragment_art_detail.xml
+++ b/Android/ArtI/app/src/main/res/layout/fragment_art_detail.xml
@@ -107,10 +107,15 @@
             android:id="@+id/art_detail_theme_cl"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
+            android:layout_gravity="center"
             android:background="@color/black"
             android:visibility="gone"
             tools:context=".ui.artGalleryDetail.ArtDetailFragment">
-
+            <androidx.constraintlayout.widget.Guideline
+                android:id="@+id/guideline2"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                app:layout_constraintGuide_percent="0.05" />
             <ImageButton
                 android:id="@+id/art_detail_back_btn"
                 android:layout_width="wrap_content"
@@ -127,12 +132,12 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="40dp"
-                android:layout_marginTop="80dp"
                 android:layout_marginBottom="20dp"
                 android:text="Theme"
                 android:textColor="@color/white"
-                android:textStyle="bold"
                 android:textSize="18sp"
+                android:textStyle="bold"
+                app:layout_constraintVertical_chainStyle="packed"
                 app:layout_constraintBottom_toTopOf="@id/gridLayout"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent" />
@@ -142,9 +147,9 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginHorizontal="60dp"
-                android:layout_marginTop="10dp"
                 android:padding="16dp"
                 app:columnCount="3"
+                app:layout_constraintBottom_toTopOf="@id/art_detail_submit_btn"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/art_detail_theme_tv"
@@ -221,6 +226,7 @@
                 android:paddingVertical="8dp"
                 android:text="완료"
                 android:textColor="@color/white"
+                app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/gridLayout" />
