--- a/Android/ArtI/app/src/main/res/layout/fragment_create_gallery.xml
+++ b/Android/ArtI/app/src/main/res/layout/fragment_create_gallery.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <layout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
-    xmlns:app="http://schemas.android.com/apk/res-auto">
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools">
 
     <data>
 
@@ -14,13 +14,13 @@
         tools:context=".ui.survey.CreateGallertFragment">
 
         <TextView
-            style="@style/MyGalleryTitleText"
             android:id="@+id/create_title_tv"
+            style="@style/MyGalleryTitleText"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_marginTop="20dp"
             android:text="미술관 생성"
             android:textSize="34sp"
-            android:layout_marginTop="20dp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
@@ -41,11 +41,13 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:background="@android:color/transparent"
+            android:hint="생성할 미술관의 이름을 작성해주세요."
             android:maxLength="16"
             android:maxLines="1"
-            android:hint="생성할 미술관의 이름을 작성해주세요."
+            android:paddingEnd="8dp"
             android:textColor="@color/black"
             app:layout_constraintBottom_toBottomOf="@+id/create_gallery_name_tv"
+            app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_chainStyle="spread_inside"
             app:layout_constraintStart_toEndOf="@+id/create_gallery_name_tv"
             app:layout_constraintTop_toTopOf="@+id/create_gallery_name_tv" />
@@ -61,13 +63,13 @@
 
         <androidx.cardview.widget.CardView
             android:id="@+id/create_gallery_thumbnail_cv"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_margin="20dp"
             app:cardCornerRadius="20dp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/create_gallery_thumbnail_tv"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_margin="20dp">
+            app:layout_constraintTop_toBottomOf="@+id/create_gallery_thumbnail_tv">
 
             <ImageView
                 android:id="@+id/create_gallery_thumbnail_iv"
@@ -105,11 +107,11 @@
         <TextView
             android:id="@+id/create_gallery_theme_tv"
             style="@style/MyGalleryTitleText"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/create_gallery_info_et"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="테마" />
+            android:text="테마"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/create_gallery_info_et" />
 
         <EditText
             android:id="@+id/create_gallery_theme_et"
@@ -131,8 +133,8 @@
             style="@style/ButtonRoundShort8"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="생성하기"
             android:layout_marginBottom="30dp"
+            android:text="생성하기"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
