--- a/Android/ArtI/app/src/main/res/layout/fragment_portfolio.xml
+++ b/Android/ArtI/app/src/main/res/layout/fragment_portfolio.xml
@@ -342,6 +342,17 @@
                 app:layout_constraintStart_toStartOf="@id/iv_represent_artist_3"
                 app:layout_constraintTop_toBottomOf="@id/iv_represent_artist_3" />
 
+            <TextView
+                android:id="@+id/tv_no_data"
+                android:text="등록된 작품이 없습니다."
+                android:visibility="gone"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintTop_toTopOf="parent"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintVertical_bias="0.9"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"/>
 
         </androidx.constraintlayout.widget.ConstraintLayout>
 
